# Embarca_Tech

./: README.md
atividades_aula/30_04-06_05_2025/isr_adc_leitura/: CMakeLists.txt
atividades_aula/30_04-06_05_2025/isr_botoes/: isr_botao.c
atividades_aula/30_04-06_05_2025/isr_wdt1/: wdt1.c
atividades_aula/Capitulo_02/: README.MD
atividades_aula/Capitulo_02/isr_dma/: dma_isr.c
atividades_aula/Capitulo_02/isr_timer/: isr_timer.c
atividades_aula/Capitulo_03/: README.MD
atividades_aula/Capitulo_03/isr_adc_leitura/: isr_adc_irq_bitdoglab.c
atividades_aula/Capitulo_04/: README.MD
atividades_aula/Capitulo_04/Blink_SEM_Timer/: Blink_SEM_Timer.c
atividades_aula/Capitulo_04/Pratica U1C2/quee/: CMakeLists.txt
atividades_aula/Capitulo_05/: README.md
atividades_aula/Capitulo_05/DMA_ADC_TEMP/: temp_mda.c
atividades_aula/Capitulo_05/DMA_MEMO/: dma12.c
atividades_aula/Capitulo_05/DMA_PWM/: DMA_PWM1.c
atividades_aula/Capitulo_05/hello_dma2/: teste_dma2.c
atividades_aula/Capitulo_05/sniff_src/: sniff_src.c
atividades_aula/Capitulo_06/: README.md
atividades_aula/Capitulo_06/TinyUSB_CDC/: TinyUSB_CDC.c
atividades_aula/Capitulo_06/comandos/: comandos.c
atividades_aula/Capitulo_06/hid_composite/: hid_composite.c
atividades_aula/Capitulo_06/hid_composite_consumer_control/: hid_composite.c
atividades_aula/Capitulo_08/: README.MD
atividades_aula/Capitulo_08/pico_w_led/: pico_w_led.c
atividades_aula/Capitulo_09/: README.md
atividades_aula/Capitulo_10/: README.md
atividades_aula/Capitulo_11/: README.md
(+32 files in other folders)
